LPS-112002  Create markup of Reorder Pages arrows

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_form-pagination.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/form-builder/_form-pagination.scss
@@ -55,7 +55,7 @@ $c: '.ddm-form-pagination';
 	}
 
 	&.top .ddm-paginated-builder-dropdown {
-		top: 45px;
+		top: 32px;
 	}
 }
 
@@ -70,26 +70,6 @@ $c: '.ddm-form-pagination';
 .page {
 	padding: 0;
 	position: relative;
-
-	h5.pagination {
-		color: #a7a9bc;
-		font-size: 10px;
-		text-transform: uppercase;
-	}
-
-	.ddm-paginated-builder-dropdown {
-		position: absolute;
-		right: 3rem;
-	}
-
-	&.bottom .ddm-paginated-builder-dropdown {
-		bottom: 25px;
-	}
-
-	&.top .ddm-paginated-builder-dropdown {
-		right: 20px;
-		top: 20px;
-	}
 
 	.add-page-button-container {
 		align-items: center;
@@ -110,8 +90,57 @@ $c: '.ddm-form-pagination';
 		}
 	}
 
+	h5.pagination {
+		color: #a7a9bc;
+		font-size: 10px;
+		text-transform: uppercase;
+	}
+
+	.ddm-paginated-builder-dropdown {
+		position: absolute;
+		right: 24px;
+
+		button.dropdown-toggle {
+			color:#6B6C7E;
+			border-width: 0px;
+
+			&:hover {
+				background-color: #F7F8F9;
+				border-color: #cdced9;
+				color: #272833;
+			}
+		}
+	}
+
+	&.bottom .ddm-paginated-builder-dropdown {
+		bottom: 25px;
+	}
+
+	&.top .ddm-paginated-builder-dropdown {
+		right: 20px;
+		top: 20px;
+	}
+
+	.ddm-paginated-builder-reorder {
+		position: absolute;
+		right: 60px;
+		top: 32px;
+
+		.reorder-page-button {
+			border-width: 0px;
+			margin-right: 4px;
+			padding-left: 9px;
+			padding-right: 9px;
+			padding-top: 9px;
+		}
+	}
+
 	.sheet {
 		margin: 0;
 		padding: 0;
+	}
+
+	.tooltip-inner {
+		width: max-content;
 	}
 }
