--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/main.scss
@@ -56,8 +56,8 @@ body.open .app-builder-upper-toolbar {
 	min-width: 260px;
 }
 
-.inline-scroller {
-	max-height: 40vh !important;
+.dropdown-fixed-height {
+	max-height: 400px !important;
 }
 
 .dropdown-footer {
